Fix traits not being left aligned

--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ hr
     display: inline-flex;
     flex-wrap: wrap;
     gap: 5px;
-    justify-content: center;
     align-items: center;
 }
 }
